# Solberus

./: .gitignore  FEATURES_ROADMAP.md  GITHUB_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  PUSH_TO_GITHUB.ps1  QUICK_START_GUIDE.md  README.md  SCAN_SECURITY.ps1  TEST_RESULTS.md
backend/: .env.example  README.md  pyproject.toml
backend/bots/: bot-sniper-1-geyser.yaml  bot-sniper-2-logs.yaml  bot-sniper-3-blocks.yaml
backend/src/: bot_runner.py  config_loader.py
backend/src/aggregator/: __init__.py  cross_chain.py
backend/src/ai/: __init__.py  event_predictor.py  gnn_analyzer.py  model_training.py  multi_headed_threat_index.py  risk_trend_engine.py  risk_verification_registry.py  sentiment_analyzer.py  smart_money_tracker.py  token_evaluator.py
backend/src/arbitrage/: __init__.py  arbitrage_engine.py  price_monitor.py
backend/src/auth/: __init__.py  login_screen.py  signature_verifier.py  token_verifier.py  wallet_connector.py
backend/src/bug_bounty/: __init__.py  bounty_converter.py  bounty_tracker.py  payment_monitor.py  poc_generator.py  report_generator.py  report_templates.py  submission_status.py
backend/src/control/: INTEGRATION_GUIDE.md  __init__.py  manual_override.py
backend/src/core/: client.py
backend/src/defense/: __init__.py  mev_shield.py
backend/src/ecosystem/: __init__.py  aegis_insurance.py  aeon_integration.py  community_distributor.py  orchestrator.py  sum_positive_engine.py
backend/src/execution/: __init__.py  jito_bundler.py  mev_protection.py
backend/src/exploitation/: __init__.py  burn_window.py  liquidity_blackholing.py  mayhem_detector.py  mayhem_engine.py  mayhem_mev.py
backend/src/infrastructure/: INTEGRATION_GUIDE.md  __init__.py  rpc_failover.py
backend/src/intelligence/: __init__.py  knowledge_graph.py  social_scanner.py  strategy_adjuster.py  whale_mimicry.py  whale_tracker.py
backend/src/interfaces/: __init__.py  core.py
backend/src/liquidity/: __init__.py  liquidity_aggregator.py  liquidity_locker.py  liquidity_provider.py
backend/src/market_making/: __init__.py  inventory_manager.py  market_maker.py  spread_calculator.py
backend/src/mev/: __init__.py  front_runner.py  jito_integration.py  mempool_monitor.py  sandwich_attacker.py
backend/src/monitoring/: liquidity_health.py
backend/src/risk/: __init__.py  adaptive_manager.py  position_sizer.py
backend/src/security/: __init__.py  comprehensive_threat_detector.py  contract_auditor.py  governance_detector.py  social_detector.py  (+4 more)
backend/tests/: smoke_test.py  test_multi_headed_threat_index.py  test_risk_trend_engine.py  test_risk_verification_registry.py
(+79 files in other folders)
